fixed some text align

--- a/_sass/_landing.sass
+++ b/_sass/_landing.sass
@@ -200,7 +200,7 @@ section
 
   @media only screen and (max-width: 1280px)
     .fv-middle
-      padding: 120px 20px 40px
+      padding: 150px 20px 40px
 
   p
     color: #AFE2DB
@@ -220,6 +220,8 @@ section
 
     + p
       font-size: 40px
+      @media only screen and (max-width: 849px)
+        font-size: 30px
 
 
   .fv-social
@@ -231,7 +233,7 @@ section
 .fv-maps
   display: block
   max-width: 320px
-  margin: 62px auto 50px
+  margin: 30px auto
   padding: 15px 0 14px
   font-size: 24px
   color: #fff
@@ -434,6 +436,10 @@ section
       line-height: 17px
       font-family: cpmono_v07light
 
+      @media only screen and (max-width: 849px)
+        padding-left: 0
+        padding-right: 0
+
       span
         text-decoration: underline
 
@@ -481,6 +487,9 @@ footer
   a
     display: inline-block
     margin: 0 30px
+
+    @media only screen and (max-width: 849px)
+      margin: 30px
 
     img
       display: block
